# pycsh_core

./: __init__.py  meson.build  meson_options.txt  pycsh.pyi
include/pycsh/: attr_malloc.h  param_list_py.h  parameter.h  pycsh.h  utils.h
src/: pycsh.c  utils.c  version.c.in
src/csh/: param_slash.c  python_host.c
src/csp_classes/: ident.c  iface.c  iface.h  ifstat.c  info.c  info.h  route.c  route.h  vmem.c  vmem.h
src/parameter/: parameter.c  parameterarray.c  parameterlist.c  pythongetsetparameter.c  pythongetsetparameter.h  pythonparameter.c  valueproxy.c  valueproxy.h
src/slash_command/: python_slash_command.c  python_slash_command.h  slash_command.c
src/wrapper/: csp_init_py.c  csp_init_py.h  dflopt_py.c  param_list_py.c  param_py.c  py_csp.c  py_csp.h  slash_py.c  spaceboot_py.c  vmem_client_py.c
